fixed scroll bar not showing up on overflow, make sure to run bower install

--- a/client/css/chat-prefix.css
+++ b/client/css/chat-prefix.css
@@ -75,7 +75,7 @@ body{
 .chat-container{
 	position: relative;
 	width: 100%;
-	height: 100%;
+	height: 262px;
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
@@ -85,8 +85,6 @@ body{
 	-webkit-flex-direction: column-reverse;
 	    -ms-flex-direction: column-reverse;
 	        flex-direction: column-reverse;
-	overflow-y: scroll;
-	overflow-x: hidden;
     background-color: rgb(221, 221, 221);
     word-wrap: break-word;
 }
