--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -53,11 +53,9 @@ body{
 .chat-container{
 	position: relative;
 	width: 100%;
-	height: 100%;
+	height: 262px;
 	display: flex;
 	flex-direction: column-reverse;
-	overflow-y: scroll;
-	overflow-x: hidden;
     background-color: rgb(221, 221, 221);
     word-wrap: break-word;
 }
